[gd_scene load_steps=8 format=3 uid="uid://dvo4sfhe4i3ee"]

[ext_resource type="Script" path="res://Scripts/Items/Coin_item.gd" id="1_3h2yj"]
[ext_resource type="Texture2D" uid="uid://c4nm2a2vhlfq7" path="res://Sprites/Items/Gold.png" id="2_s843x"]
[ext_resource type="Texture2D" uid="uid://bx6v3xo8gvwtt" path="res://Sprites/Lighting/light.png" id="3_1fh7d"]

[sub_resource type="Curve" id="Curve_88t21"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.164835), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_gx4d2"]
offsets = PackedFloat32Array(0, 0.680365, 1)
colors = PackedColorArray(1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_5fsje"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dk3lu"]
radius = 95.0

[node name="Coins" type="Node2D"]
script = ExtResource("1_3h2yj")

[node name="Particles" type="CPUParticles2D" parent="."]
amount = 15
lifetime = 0.75
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 20.0
linear_accel_min = -20.0
linear_accel_max = -10.0
radial_accel_min = -8.0
damping_max = 15.0
scale_amount_curve = SubResource("Curve_88t21")
color = Color(1, 1, 0.34902, 1)

[node name="Collected" type="CPUParticles2D" parent="."]
emitting = false
amount = 30
one_shot = true
speed_scale = 2.5
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 22.0
initial_velocity_max = 28.0
linear_accel_min = -20.0
linear_accel_max = -10.0
radial_accel_min = -8.0
damping_max = 10.0
scale_amount_curve = SubResource("Curve_88t21")
color = Color(0.99758, 1, 0.958284, 1)
color_ramp = SubResource("Gradient_gx4d2")

[node name="Sprite" type="Sprite2D" parent="."]
self_modulate = Color(0.735685, 0.735164, 0, 1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_s843x")

[node name="Shine" type="PointLight2D" parent="."]
energy = 0.5
texture = ExtResource("3_1fh7d")
texture_scale = 0.15

[node name="Coin" type="Area2D" parent="."]
collision_layer = 64

[node name="Collision" type="CollisionShape2D" parent="Coin"]
shape = SubResource("CircleShape2D_5fsje")
debug_color = Color(0.331025, 0.486418, 1, 0)

[node name="Detector" type="Area2D" parent="."]
collision_layer = 64

[node name="Collider" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_dk3lu")
debug_color = Color(6.35326e-06, 0.64237, 0.324151, 0)

[node name="Timer" type="Timer" parent="."]

[node name="Collected_timer" type="Timer" parent="."]

[connection signal="body_entered" from="Coin" to="." method="_on_coin_body_entered"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Collected_timer" to="." method="_on_collected_timer_timeout"]
